# sdl2-starter-template

./: .gitignore  CMakeLists.txt  README.md  common.h  defs.h  draw.c  draw.h  init.c  init.h  input.c  input.h  main.c  main.h  structs.h
